# ios-media-downloader-gateway

./: .dockerignore  .gitignore  Dockerfile  Download.shortcut  DownloadQuick.shortcut  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: release.yml
app/: auth.py  config.py  db.py  extractor.py  formats.py  gallery.py  instagram.py  logging_setup.py  main.py  merge.py  metrics.py  models.py  site_resolver.py  version.py
data/: config.example.toml
docker/: Makefile  compose.yaml
docker/data/: config.example.toml
